--- a/css/styles.css
+++ b/css/styles.css
@@ -221,6 +221,10 @@ body {
   color: #595959;
 }
 
+.special {
+  color: #ff6b08;
+}
+
 .projects-title-two {
   font-size: 14px;
   font-weight: 400;
@@ -253,15 +257,11 @@ body {
   color: #ff6b08;
 }
 
-.profession-time {
+.times {
   color: #a8a8a8;
   font-size: 12px;
   font-weight: 400;
   line-height: 24px;
-}
-
-.profession-divider {
-  color: #000000;
 }
 
 .profession-duties {
@@ -292,14 +292,7 @@ body {
   line-height: 24px;
 }
 
-.education-time {
-  color: #a8a8a8;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 24px;
-}
-
-.education-divider {
+.divider {
   color: #000000;
 }
 
