--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,18 @@ body {
 /*сейдбар*/
 .sidebar {
   background: #1e2939;
-  width: 370px;
+  width: 100%;
   padding-top: 40px;
   padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
 
 .my-photo {
-  width: 370px;
+  max-width: 500px;
+  width: 100%;
 }
 
 .element {
